Implemented up to decision completion call